fix table rows width on Firefox

--- a/src/app/view/perspectives/table/body/table-body.component.scss
+++ b/src/app/view/perspectives/table/body/table-body.component.scss
@@ -1,6 +1,5 @@
 :host {
   overflow-y: auto;
-  min-width: min-content; // TODO verify on Edge
   display: block;
   counter-reset: row-number;
 }
